objects/CMPL123CME__MedDRA_High_Level_and_Preferred_Term__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123CME__active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Active Status of High Level and Preferred Term</description>
        <inlineHelpText>Active Status of High Level and Preferred Term</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__hlt_code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>8-digit code to identify the High Level Term</description>
        <inlineHelpText>8-digit code to identify the High Level Term</inlineHelpText>
        <label>HLT Code</label>
        <referenceTo>CMPL123CME__MedDRA_High_Level_Term__c</referenceTo>
        <relationshipLabel>MedDRA High Level and Preferred Term</relationshipLabel>
        <relationshipName>MedDRA_High_Level_and_Preferred_Term</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__hlt_pt_unique_key__c</fullName>
        <externalId>true</externalId>
        <label>HLT and PT Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CMPL123CME__pt_code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>8-digit code to identify the Preferred Term</description>
        <inlineHelpText>8-digit code to identify the Preferred Term</inlineHelpText>
        <label>PT Code</label>
        <referenceTo>CMPL123CME__MedDRA_Preferred_Term__c</referenceTo>
        <relationshipLabel>MedDRA High Level and Preferred Term</relationshipLabel>
        <relationshipName>MedDRA_High_Level_and_Preferred_Term</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MedDRA High Level and Preferred Term</label>
    <nameField>
        <label>MedDRA High Level and Preferred Term Nam</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MedDRA High Level and Preferred Term</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>CMPL123CME__HLT_Code_is_required_field</fullName>
        <active>true</active>
        <description>The rule contains a field that is mandatory.</description>
        <errorConditionFormula>ISBLANK(CMPL123CME__hlt_code__c)</errorConditionFormula>
        <errorDisplayField>CMPL123CME__hlt_code__c</errorDisplayField>
        <errorMessage>This field cannot be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123CME__PT_Code_is_required_field</fullName>
        <active>true</active>
        <description>The rule contains a field that is mandatory.</description>
        <errorConditionFormula>ISBLANK(CMPL123CME__pt_code__c)</errorConditionFormula>
        <errorDisplayField>CMPL123CME__pt_code__c</errorDisplayField>
        <errorMessage>This field cannot be empty</errorMessage>
    </validationRules>
</CustomObject>